--- a/source/sass/blocks/additional-card.scss
+++ b/source/sass/blocks/additional-card.scss
@@ -13,8 +13,11 @@
 }
 
 .additional-card__title {
+  font-size: 16px;
   line-height: 16px;
   font-weight: 400;
+  margin-top: 14px;
+  margin-bottom: 0;
   text-transform: uppercase;
 }
 
@@ -54,7 +57,7 @@
 
   .additional-card {
     border-bottom: 1px solid $color-pinkish-grey;
-    padding: 24px 37px;
+    padding: 19px 37px 28px;
   }
 }
 
@@ -68,10 +71,15 @@
 
   .additional-card__value-wrapper {
     align-items: center;
+    width: 68%;
+  }
+
+  .additional-card__description {
+    width: 285px;
   }
 
   .additional-card__button {
-    width: 254px;
+    width: 245px;
     height: 40px;
   }
 
