--- a/source/sass/blocks/additional-products.scss
+++ b/source/sass/blocks/additional-products.scss
@@ -7,7 +7,9 @@
   background-color: $color-white;
   padding-left: 20px;
   padding-right: 20px;
+  margin-top: 27px;
   margin-right: auto;
+  margin-bottom: 32px;
   letter-spacing: -0.9px;
   font-size: 24px;
   line-height: 25px;
@@ -30,17 +32,19 @@
 }
 
 .additional-products__list {
-  padding: 0;
   list-style: none;
   display: flex;
   flex-direction: column;
+  margin-bottom: 0;
+  padding: 0;
+  padding-bottom: 45px;
 }
 
 .additional-products__item {
   display: flex;
   flex-direction: column;
   border-bottom: 1px solid $color-grey-border;
-  padding-bottom: 20px;
+  padding-bottom: 16px;
 }
 
 .additional-products__gift-title {
@@ -78,13 +82,21 @@
 }
 
 @media (min-width: $tablet-width) {
+  .additional-products {
+    margin-top: -75px;
+    margin-bottom: 78px;
+  }
+
   .additional-products__title {
     font-size: 36px;
+    letter-spacing: 0;
     line-height: 36px;
+    font-weight: 400;
     margin-top: 0;
     padding-left: 37px;
     padding-right: 37px;
-    max-width: 425px;
+    margin-bottom: 81px;
+    max-width: 413px;
   }
 
   .additional-products__title-wrapper {
@@ -101,6 +113,8 @@
   .additional-products__list {
     border: 1px solid $color-pinkish-grey;
     border-bottom: none;
+    padding-bottom: 0;
+    margin-bottom: 68px;
   }
 
   .additional-products__gift-title {
@@ -124,9 +138,11 @@
 @media (min-width: $desktop-width) {
   .additional-products {
     margin-top: -70px;
+    margin-bottom: 84px;
   }
 
   .additional-products__title {
+    margin-top: 4px;
     margin-left: -37px;
   }
 
@@ -143,7 +159,7 @@
       background-size: 245px auto;
     }
     background-image: url("../img/gift-photo-desktop@1x.jpg");
-    padding: 187px 43px 42px;
+    padding: 187px 40px 42px;
     text-align: center;
     max-width: 245px;
   }
@@ -152,19 +168,11 @@
     border: none;
     border-top: 1px solid $color-pinkish-grey;
     margin: 0;
-    width: 75%;
+    width: 73%;
   }
 
   .additional-products__wrapper {
     display: flex;
     justify-content: space-between;
-  }
-
-  .additional-card__value-wrapper {
-    width: 70%;
-  }
-
-  .additional-card__description {
-    width: 285px;
   }
 }
