--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -157,14 +157,16 @@
 @media (min-width: $tablet-width) {
   .example {
     background: none;
-    background-image: linear-gradient(to top, $color-bg-light-grey 46%, transparent 46%);
+    background-image: linear-gradient(to top, $color-bg-light-grey 43%, transparent 43%);
+    border-top: 1px solid $color-grey-focus;
+    margin-top: -30px;
   }
 
   .example__title {
     font-size: 60px;
     line-height: 60px;
     margin: 0;
-    padding-top: 13px;
+    padding-top: 44px;
     padding-bottom: 50px;
   }
 
@@ -220,11 +222,11 @@
   }
 
   .example__illustration-value--border-weight {
-    padding: 23px 59px;
+    padding: 23px 56px;
   }
 
   .example__illustration-value--border-day {
-    padding: 23px 34px;
+    padding: 24px 30px;
   }
 
   .example__img-slim {
@@ -277,8 +279,8 @@
   }
 
   .example__illustration-toggle {
-    padding-top: 18px;
-    padding-bottom: 75px;
+    padding-top: 15px;
+    padding-bottom: 64px;
   }
 
   .example__illustration-button {
@@ -304,21 +306,29 @@
 
 @media (min-width: $desktop-width) {
   .example {
-    background-image: linear-gradient(to top, $color-bg-light-grey 77%, transparent 77%);
+    background-image: linear-gradient(to top, $color-bg-light-grey 75%, transparent 75%);
+    border: none;
+  }
+
+  .example__title {
+    padding-top: 23px;
+    padding-bottom: 103px;
   }
 
   .example__wrapper {
     display: flex;
     align-items: flex-end;
-    padding-bottom: 75px;
+    width: 100%;
+    padding-bottom: 63px;
   }
 
   .example__value-wrapper {
     flex-direction: column;
+    padding-bottom: 10px;
   }
 
   .example__advantages-wrapper {
-    width: 53%;
+    width: 50%;
   }
 
   .example__illustration-list {
@@ -338,7 +348,7 @@
 
   .example__illustration-description {
     padding: 0 8px;
-    margin: 0 28px;
+    margin: 0 24px;
     background-color: $color-bg-light-grey;
   }
 
@@ -350,22 +360,29 @@
     font-size: 16px;
     line-height: 24px;
     margin: 0;
-    padding-bottom: 70px;
+    padding-top: 47px;
+    padding-right: 174px;
+    padding-bottom: 65px;
   }
 
   .example__slider-wrapper {
-    width: 100%;
+    width: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
   }
 
-  .example__slider-item--img {
-    padding-bottom: 45px;
+  .example__img-slim {
+    width: 100%;
+    height: auto;
+    padding-bottom: 35px;
+    margin-left: -17px;
   }
 
   .example__illustration-toggle {
+    padding-top: 0;
     padding-bottom: 0;
+    padding-left: 40px;
   }
 
   .example__slider-list {
