--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -161,12 +161,12 @@
 
 @media (min-width: $desktop-width) {
   .features {
-    padding-top: 80px;
+    padding-top: 71px;
   }
 
   .features__item {
     padding-right: 0;
-    margin-right: 50px;
+    margin-right: 0;
     max-width: 245px;
   }
 
@@ -176,6 +176,6 @@
 
   .features__title {
     margin: 0;
-    padding-bottom: 60px;
+    padding-bottom: 72px;
   }
 }
