--- a/source/sass/blocks/product-catalog.scss
+++ b/source/sass/blocks/product-catalog.scss
@@ -3,15 +3,15 @@
   font-size: 36px;
   line-height: 60px;
   font-weight: 400;
-  border-bottom: 1px solid $color-bg-light-grey;
   margin: 0;
-  padding: 30px 20px 35px;
+  padding: 16px 20px 27px;
 }
 
 .product-catalog__list {
   @include reset-list;
   display: flex;
   flex-direction: column;
+  border-top: 1px solid $color-bg-light-grey;
 }
 
 .product-catalog__item {
@@ -22,7 +22,7 @@
   cursor: pointer;
   display: flex;
   flex-direction: column;
-  padding: 25px 0;
+  padding: 0;
 }
 
 @media (min-width: $tablet-width) {
@@ -30,7 +30,7 @@
     font-size: 60px;
     line-height: 60px;
     border: none;
-    padding: 70px 0 156px 0;
+    padding: 51px 0 165px 0;
   }
 
   .product-catalog__item-wrapper {
@@ -56,6 +56,7 @@
 @media (min-width: $desktop-width) {
   .product-catalog__list {
     margin: 0 -40px;
+    border: none;
   }
 
   .product-catalog__item {
@@ -67,6 +68,6 @@
   }
 
   .product-catalog__title {
-    padding-top: 150px;
+    padding-top: 188px;
   }
 }
