--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -7,7 +7,7 @@
   font-size: 36px;
   line-height: 60px;
   font-weight: normal;
-  padding-top: 7px;
+  padding-top: 10px;
   margin-bottom: 23px;
 }
 
@@ -32,7 +32,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  padding: 0 12px;
+  padding: 0 14px;
 }
 
 .example__illustration-value {
@@ -46,11 +46,11 @@
 }
 
 .example__illustration-value--border-weight {
-  padding: 13px 44px 20px 44px;
+  padding: 13px 43px 20px;
 }
 
 .example__illustration-value--border-day {
-  padding: 13px 24px 20px 24px;
+  padding: 13px 22px 20px;
 }
 
 .example__illustration-description {
@@ -144,7 +144,7 @@
     z-index: 2;
   }
   font-size: 0;
-  margin: 0 20px;
+  margin: 0 17px;
   width: 84px;
   height: 14px;
   background-color: $color-white;
