--- a/source/sass/blocks/programs-selection.scss
+++ b/source/sass/blocks/programs-selection.scss
@@ -2,6 +2,12 @@
   font-size: 36px;
   line-height: 60px;
   font-weight: 400;
+  margin-top: 14px;
+  margin-bottom: 25px;
+}
+
+.programs-selection {
+  padding-bottom: 34px;
 }
 
 @media (min-width: $tablet-width) {
