--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -15,10 +15,24 @@
   .container {
     padding: 0 3.9%;
   }
+
+  .container__form {
+    margin: 0 auto;
+    width: 100%;
+    padding: 0 9.1%;
+  }
 }
 
 @media (min-width: $desktop-width) {
   .container {
     padding: 0 7.6%;
+  }
+
+  .container__form--name {
+    padding: 0;
+  }
+
+  .container__form--task {
+    padding: 0;
   }
 }
