--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -243,7 +243,8 @@
       border-radius: 2.5px;
       position: absolute;
       top: 50%;
-      transform: translateY(-50%);
+      left: 0;
+      transform: translate(0, -50%);
     }
     width: 428px;
   }
