--- a/source/sass/blocks/product-catalog.scss
+++ b/source/sass/blocks/product-catalog.scss
@@ -44,6 +44,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     margin: 0 -30px;
+    border-top: none;
   }
 
   .product-catalog__item {
@@ -56,7 +57,6 @@
 @media (min-width: $desktop-width) {
   .product-catalog__list {
     margin: 0 -40px;
-    border: none;
   }
 
   .product-catalog__item {
